<resources>

    <!--    adding API Key-->
    <string name="my_map_api_key">AIzaSyBprO5DNuZS59LfFq6Kr2LMmsEt4GSSaBo</string>

    <string name="app_name">TrackMaster</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="startnewactivity">startNewActivity</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="date">Date: </string>
    <string name="distance">Distance: %3$d km</string>
    <string name="time">Time:</string>
    <string name="average_pace">Average pace:</string>
    <string name="max_distance">Longest Distance:</string>
    <string name="max_time">Longest Time:</string>
    <string name="max_pace">Highest Pace:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="end_tracking">End tracking</string>
    <string name="finish_run">Finish Run</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="_00_00_00_00">00:00:00:00</string>

</resources>