<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/maxDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/max_distance"
        />

    <TextView
        android:id="@+id/maxTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/max_time"
        />

    <TextView
        android:id="@+id/maxPace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/max_pace"
        />

</LinearLayout>